k8s/carrental-v1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  carrental
  labels:
    run:  carrental
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      run:  carrental
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        run:  carrental
    spec:
      containers:
      - image:  beetravels/carrental-v1:node-50d8ef540932c4a925982ba50a7d8f81434e3592
        imagePullPolicy: Always
        name:  carrental
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 256Mi
      restartPolicy: Always
