k8s/carrental-v2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  carrental
  labels:
    run:  carrental
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      run:  carrental
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        run:  carrental
    spec:
      containers:
      - image:  beetravels/carrental-v2:node-b32c141d36c3f618ca8cf8ee96ee1c65c7f7bcd7
        imagePullPolicy: Always
        name:  carrental
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 256Mi
      restartPolicy: Always
