k8s/currencyexchange-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  currencyexchange
  labels:
    run:  currencyexchange
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      run:  currencyexchange
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        run:  currencyexchange
    spec:
      containers:
      - image:  beetravels/currencyexchange:node-471ff48530e5311413108c58cbfd7bc7016f2269
        imagePullPolicy: Always
        name: currencyexchange
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 256Mi
      restartPolicy: Always
