k8s/destination-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  destination
  labels:
    run:  destination
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      run:  destination
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        run:  destination
    spec:
      containers:
      - image:  beetravels/destination:v0.0.1
        imagePullPolicy: Always
        name:  destination
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 256Mi
      restartPolicy: Always
