k8s/destination-v1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  destination-v1
  labels:
    run:  destination
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      run:  destination
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        run:  destination
        version: v1
    spec:
      containers:
      - image:  moficodes/destination-v1:v1.0.0
        imagePullPolicy: Always
        name:  destination
        resources:
          limits:
            cpu: 500m
            memory: 1024Mi
          requests:
            cpu: 500m
            memory: 1024Mi
      restartPolicy: Always
