k8s/flights-v2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  flights
  labels:
    run:  flights
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      run:  flights
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        run:  flights
    spec:
      containers:
      - image:  beetravels/flights-v2:node-50d8ef540932c4a925982ba50a7d8f81434e3592
        imagePullPolicy: Always
        name:  flights
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 256Mi
      restartPolicy: Always
