k8s/hotel-v1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  hotel
  labels:
    run:  hotel
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      run:  hotel
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        run:  hotel
    spec:
      containers:
      - image:  beetravels/hotel-v1:node-b32c141d36c3f618ca8cf8ee96ee1c65c7f7bcd7
        imagePullPolicy: Always
        name:  hotel
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 256Mi
      restartPolicy: Always
