k8s/hotel-v2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  hotel-v2
  labels:
    run:  hotel
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      run:  hotel
      version: v2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        run:  hotel
        version: v2
    spec:
      containers:
      - image:  beetravels/hotel-v2:node-03e4a69a09bdc56ca9676af9355fbf204b48db31
        imagePullPolicy: Always
        name:  hotel
        resources:
          limits:
            cpu: 500m
            memory: 1024Mi
          requests:
            cpu: 500m
            memory: 1024Mi
      restartPolicy: Always
