k8s/mongo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  mongo
  labels:
    app:  mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  mongo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  mongo
    spec:
      containers:
      - image:  mongo
        imagePullPolicy: Always
        name:  mongo
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 256Mi
      restartPolicy: Always
