k8s/mongo-express-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  mongo-express
  labels:
    run:  mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      run:  mongo-express
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        run:  mongo-express
    spec:
      containers:
      - image:  mongo-express
        imagePullPolicy: Always
        name:  mongo-express
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 256Mi
      restartPolicy: Always
