k8s/ui-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name:  bee-ui
  labels:
    run:  bee-ui
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      run:  bee-ui
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        run:  bee-ui
    spec:
      containers:
      - image:  moficodes/bee-ui:v0.0.8
        imagePullPolicy: Always
        name:  bee-ui
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 256Mi
      restartPolicy: Always
