k8s/carrental-service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  carrental
  labels:
    run: carrental
spec:
  selector:
    run:  carrental
  type:  ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort:  9102
