k8s/ui-service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  bee-ui
  labels:
    run: bee-ui
spec:
  selector:
    run:  bee-ui
  type:  ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort:  9000
