k8s/ui-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bee-travels-ingress
spec:
  tls:
    - hosts: 
        - mofi-iks-5290c8c8e5797924dc1ad5d1b85b37c0-0000.us-east.containers.appdomain.cloud
      secretName: mofi-iks-5290c8c8e5797924dc1ad5d1b85b37c0-0000
  rules:
    - host: mofi-iks-5290c8c8e5797924dc1ad5d1b85b37c0-0000.us-east.containers.appdomain.cloud
      http:
        paths:
          - path: /
            backend:
              serviceName: bee-ui
              servicePort: 80
